# agency-engineering-skills

./: .gitignore  Makefile  README.md  agency-engineering.yaml  hypothesize.toml
hypothesize/: README.md  SKILL.md  pyproject.toml
hypothesize/references/: adoption.md  publication-model.md  tag-vocabulary.md
hypothesize/src/hypothesize/: __init__.py  cli.py  collector.py  config.py  core.py  publish.py  targets.py
hypothesize/src/hypothesize/adapters/: __init__.py  behave.py  gherkin.py  pytest.py
hypothesize/templates/: Makefile.snippet  capability.feature  ci-github.yml  evidence.toml  portfolio.toml
hypothesize/tests/: test_adapters.py  test_engine.py  test_graphist_golden.py  test_targets_config.py
hypothesize/tests/fixtures/graphist/: behave.json  portfolio.toml  readme-block.md  research-data.js  research-status.json  (+1 more)
ltp/: README.md  SKILL.md  pyproject.toml
ltp/agents/: openai.yaml
ltp/dashboard/: index.html  package-lock.json  package.json
ltp/dashboard/src/: App.tsx  DetailsPanel.tsx  Overview.tsx  TreeCanvas.tsx  model-types.ts  model.ts  styles.css
ltp/evals/: README.md  build_fixtures.py
ltp/references/: cli-and-integration.md  diagnostics.md  logical-scrutiny.md  ltp-model.schema.json  model-and-vocabulary.md  workflow.md
ltp/scripts/: serve_dashboard.py
ltp/src/ltp/: __init__.py  __main__.py  cli.py  diagnostics.py  enums.py  errors.py  history.py  ids.py  migrate.py  models.py  obligations.py  predictions.py  provenance.py  schema.py  store.py
ltp/templates/: ci-github.yml
ltp/tests/: conftest.py  regen_golden.py  test_cli.py  test_diagnostics.py  test_dynamic.py  test_integration.py  test_migrate.py  test_models.py  test_renderers.py  test_schema.py  test_serve_dashboard.py  test_validators.py
(+228 files in other folders)
